Implement slew rate control using SwN command

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,10 +37,13 @@
 
     <div id="rate">
   		<span class="title">Slew Rate</span>
-    	<a id="rate_max" class="active" href="#">Max</a>
-    	<a id="rate_find" href="#">Find</a>
-    	<a id="rate_center" href="#">Center</a>
-    	<a id="rate_guide" href="#">Guide</a>
+    	<a id="rate_8" class="active" href="#">8</a>
+    	<a id="rate_7" href="#">7</a>
+    	<a id="rate_6" href="#">6</a>
+    	<a id="rate_5" href="#">5</a>
+    	<a id="rate_4" href="#">4</a>
+    	<a id="rate_3" href="#">3</a>
+    	<a id="rate_2" href="#">2</a>
     </div>
   </body>
 </html>
